--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
 
         <div class="links">
-            <p id="bl"><a href="">Bilibili</a></p>
-                <p id="wc"><a href="">WeChat</a></p>
-                    <p id="bg"><a href="">Blog</a></p>
+            <p id="bl"><a href="https://space.bilibili.com/454090999" target="_blank">Bilibili</a></p>
+                <p id="wc"><a href="https://github.com/autism25" target="_blank">Github</a></p>
+                    <p id="bg"><a href="./图片/blog.html">Blog</a></p>
         </div>
     </div>
     
