--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autism</title>
+    <title>Fawziya</title>
     <link rel="stylesheet" href="./主页style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <img class="pic1" src="./图片/头像.jpg" alt="">
         </p>
     
-        <h1>Autism</h1>
+        <h1>Fawziya</h1>
     
         <div class="box1">  
             <h4>你好，欢迎来到我的个人主页！</h4>
@@ -30,8 +30,8 @@
                 </a>
             </p>
             <p>
-                <a href="https://i.y.qq.com/n2/m/share/details/taoge.html?id=7368744810" target="_blank">
-                    音乐
+                <a href="./照片墙.html">
+                    照片墙
                 </a>
             </p>
         </div>
