--- a/关于我.html
+++ b/关于我.html
@@ -2,18 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我</title>
     <link rel="stylesheet" href="./关于我style.css">
 </head>
 <body>
-    <div class="box1">
-        <h3>简介</h3>
-        <p></p>
-        <h3>生日</h3>
-        <p></p>
-        <h3><a href="./index.html">主页传送门</a></h3>
+    <div class="A3">
+        <h1>Nice to meet you!</h1>
+    </div>
+    <div class="A2">
+        <div class="C1">
+            <H1>标签</H1>
+        </div>
+        <div class="C2">
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+        </div>
+    </div>
+    <div class="A1">
+        <div class="B1">
+            <h1>个人简介</h1>
+        </div>
+        <div class="B2">
+            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nesciunt placeat consectetur minus excepturi fuga possimus tenetur nisi distinctio provident natus laudantium nihil repudiandae asperiores, adipisci vel vitae laborum iste. Suscipit rem error voluptates unde blanditiis, mollitia repellat ad officia nisi. Nemo quasi ipsum distinctio possimus ab. Dolorum, aspernatur possimus.</P>
+        </div>
+    </div>
+    <div class="A4">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+        <h3 ><a href="./index.html">点我回主页</a></h3>
     </div>
 </body>
 </html>
