--- a/联系我.html
+++ b/联系我.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="./联系我.css">
 </head>
 <body>
-    <div class="box1">
-        <h3>QQ : 507326449</h3>
-        <h3>E-mail : 15716492371@163.com</h3>
-        <h3><a href="./index.html">主页传送门</a></h3>
+    <div class="box">
+        <div class="box1">
+            <div class="box3">
+                <h1>&emsp;</h1>
+            </div>
+            <div>
+                <h1>QQ : 507326449</h1>
+                <h1>E-mail : 15716492371@163.com</h1>
+                <h1>&emsp;&emsp;&emsp;&ensp;yfeng5493@gmail.com</h1>
+                <h1>WeChat:507326449</h1>
+                <h3><a href="./index.html">点我回主页</a></h3>
+            </div>
+        </div>
     </div>
 </body>
 </html>
